updated openApi.yml, added login/logout/register tests
