# youband-manager/module-members/api-docs.yaml
@@ -63,10 +63,63 @@ paths:
       responses:
         "200":
           description: OK
+  /api/invitations/{id}:
+    get:
+      tags:
+      - invitation-rest-controller
+      operationId: findById_1
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/UserDto'
+                $ref: '#/components/schemas/InvitationDto'
+    put:
+      tags:
+      - invitation-rest-controller
+      operationId: updateInvitation
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/InvitationDto'
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/InvitationDto'
+    delete:
+      tags:
+      - invitation-rest-controller
+      operationId: deleteInvitation
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
   /api/users:
     get:
       tags:
@@ -98,6 +151,60 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/UserDto'
+  /api/users/register:
+    post:
+      tags:
+      - user-rest-controller
+      operationId: registerUser
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserDto'
+        required: true
+      responses:
+        "200":
+          description: OK
+  /api/users/logout:
+    post:
+      tags:
+      - user-rest-controller
+      operationId: logoutUser
+      responses:
+        "200":
+          description: OK
+  /api/users/login:
+    post:
+      tags:
+      - user-rest-controller
+      operationId: loginUser
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserDto'
+        required: true
+      responses:
+        "200":
+          description: OK
+  /api/invitations:
+    post:
+      tags:
+      - invitation-rest-controller
+      operationId: createInvitation
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/InvitationDto'
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/InvitationDto'
 components:
   schemas:
     UserDto:
@@ -111,24 +218,43 @@ components:
         id:
           type: integer
           format: int64
-          description: user's identification number
-          example: 7
         userType:
           type: string
           enum:
           - MANAGER
           - BAND_MEMBER
-          description: user's role
-          example: MANAGER
         firstName:
           type: string
-          description: user's first name
-          example: Kurt
         lastName:
           type: string
-          description: user's last name
-          example: Cobain
         email:
           type: string
-          description: user's email address
-          example: curt.cobain@mail.com
+    InvitationDto:
+      required:
+      - dateReceived
+      - fromBandId
+      - message
+      - status
+      - toUserId
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        fromBandId:
+          type: integer
+          format: int64
+        toUserId:
+          type: integer
+          format: int64
+        message:
+          type: string
+        status:
+          type: string
+          enum:
+          - DECLINED
+          - ACCEPTED
+          - PENDING
+        dateReceived:
+          type: string
+          format: date
